--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row header align-items-between">
+            <div class="col start">START BUSTRAP</div>
+            <div class="col icona">ICONA</div>
+        </div>
+        <div class="row main">
+            <div class="col main">MAIN</div>
+        </div>
+        <div class="row profilo">
+            <div class="col">PROFILO</div>
+        </div>
+        <div class="row picture">
+            <div class="col col-md-2">
+                <div class="row foto">foto1</div>
+                <div class="row foto">foto2</div>
+                <div class="row foto">foto3</div>
+                <div class="col col-md-2">
+                    <div class="row foto">foto4</div>
+                    <div class="row foto">foto5</div>
+                    <div class="row foto">foto6</div>
+                </div>
+            </div>
+            
+        </div>
+
+
+    </div>     
 </body>
 </html>
