--- a/index.html
+++ b/index.html
@@ -21,20 +21,54 @@
             <div class="col">PROFILO</div>
         </div>
         <div class="row picture">
-            <div class="col col-md-2">
-                <div class="row foto">foto1</div>
-                <div class="row foto">foto2</div>
-                <div class="row foto">foto3</div>
-                <div class="col col-md-2">
-                    <div class="row foto">foto4</div>
-                    <div class="row foto">foto5</div>
-                    <div class="row foto">foto6</div>
+            <div class="col-12 col-md-6 col-lg-4 foto1">
+                foto1
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto2">
+                foto2
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto3">
+                foto3
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto4">
+                foto4
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto5">
+                foto5
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto6">
+                foto6
+            </div>
+        </div>
+        <div class="row about">
+            <div class="row abaut-tex">abaut</div>
+            <div class="row tex">
+                <div class="col-12 col-md-6 col-lg-6 tex1">
+                tex1
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 tex2">
+                tex2
                 </div>
             </div>
-            
+            <div class="row download">Download</div>
         </div>
-
-
+        <div class="row contact-me">
+            <div class="row contact-me-title"> CONTACT ME</div>
+            <div class="row form"> Nome...</div>
+        </div>
+        <div class="row footer">
+            <div class="col-12 col-md-4 col-lg-4 location">
+                Location
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 around">
+                Around the web
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 freelancer">
+                About freelancer
+            </div>   
+        </div>
+        <div class="row copyright">
+            <div class="col copyright-tex">copyright</div>
     </div>     
 </body>
 </html>
