--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row header align-items-between">
-            <div class="col start">START BUSTRAP</div>
-            <div class="col icona">ICONA</div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">START BOOSTRAP</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">PROFILO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABAUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+      <section>
         <div class="row main">
-            <div class="col main">MAIN</div>
+            <div class="col main"></div>
         </div>
         <div class="row profilo">
             <div class="col">PROFILO</div>
@@ -40,6 +57,8 @@
                 foto6
             </div>
         </div>
+    </section>
+    
         <div class="row about">
             <div class="row abaut-tex">abaut</div>
             <div class="row tex">
@@ -53,6 +72,22 @@
             <div class="row download">Download</div>
         </div>
         <div class="row contact-me">
+            <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
             <div class="row contact-me-title"> CONTACT ME</div>
             <div class="row form"> Nome...</div>
         </div>
