--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
           </div>
         </div>
       </nav>
-      <section>
-        <div class="row main">
-            <div class="col main"></div>
+
+    <section class="main">
+        <div class="row">
+            <div class="col m-5">
+                <img class="avatar" src="./img/avatar.svg" alt="Avatar">
+                <h1>START BOOTSTRAP</h1>
+                <img class="avatar mb-3 mt-3" src="./img/star.w.svg" alt="Star">
+                <h4>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
+            </div>
         </div>
+    </section>  
+
+
         <div class="row profilo">
             <div class="col">PROFILO</div>
         </div>
@@ -57,8 +66,8 @@
                 foto6
             </div>
         </div>
-    </section>
     
+
         <div class="row about">
             <div class="row abaut-tex">abaut</div>
             <div class="row tex">
