--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
 
-    <section class="main">
+    <section class="main container-fluid">
         <div class="row">
             <div class="col m-5">
                 <img class="avatar" src="./img/avatar.svg" alt="Avatar">
@@ -40,33 +40,38 @@
                 <h4>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
             </div>
         </div>
-    </section>  
+    </section>
 
-
-        <div class="row profilo">
-            <div class="col">PROFILO</div>
-        </div>
-        <div class="row picture">
-            <div class="col-12 col-md-6 col-lg-4 foto1">
-                foto1
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 foto2">
-                foto2
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 foto3">
-                foto3
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 foto4">
-                foto4
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 foto5">
-                foto5
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 foto6">
-                foto6
+    <section class="profilo container-fluid">
+        <div class="row">
+            <div class="col m-5">
+                <h2>PORTFOLIO</h2>
+                <img class="avatar" src="./img/star.B.svg" alt="Avatar">
             </div>
         </div>
-    
+    </section>
+    <section class="picture  mb-5 container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 foto1 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto2 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto3 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto4 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto5 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 foto6 p-2">
+                <img src="./img/cabin.png" alt="">
+            </div>
+        </div>
+    </section>
 
         <div class="row about">
             <div class="row abaut-tex">abaut</div>
