--- a/index.html
+++ b/index.html
@@ -44,47 +44,52 @@
 
     <section class="profilo container-fluid">
         <div class="row">
-            <div class="col m-5">
+            <div class="col m-3">
                 <h2>PORTFOLIO</h2>
                 <img class="avatar" src="./img/star.B.svg" alt="Avatar">
             </div>
         </div>
     </section>
-    <section class="picture  mb-5 container">
+
+    <section class="picture mb-3 container">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 foto1 p-2">
+            <div class="col-12 col-md-6 col-lg-4 foto1 py-2">
                 <img src="./img/cabin.png" alt="">
             </div>
-            <div class="col-12 col-md-6 col-lg-4 foto2 p-2">
-                <img src="./img/cabin.png" alt="">
+            <div class="col-12 col-md-6 col-lg-4 foto2 py-2">
+                <img src="./img/cake.png" alt="">
             </div>
-            <div class="col-12 col-md-6 col-lg-4 foto3 p-2">
-                <img src="./img/cabin.png" alt="">
+            <div class="col-12 col-md-6 col-lg-4 foto3 py-2">
+                <img src="./img/circus.png" alt="">
             </div>
-            <div class="col-12 col-md-6 col-lg-4 foto4 p-2">
-                <img src="./img/cabin.png" alt="">
+            <div class="col-12 col-md-6 col-lg-4 foto4 py-2">
+                <img src="./img/game.png" alt="">
             </div>
-            <div class="col-12 col-md-6 col-lg-4 foto5 p-2">
-                <img src="./img/cabin.png" alt="">
+            <div class="col-12 col-md-6 col-lg-4 foto5 py-2">
+                <img src="./img/safe.png" alt="">
             </div>
-            <div class="col-12 col-md-6 col-lg-4 foto6 p-2">
-                <img src="./img/cabin.png" alt="">
+            <div class="col-12 col-md-6 col-lg-4 foto6 py-2">
+                <img src="./img/submarine.png" alt="">
             </div>
         </div>
     </section>
 
-        <div class="row about">
-            <div class="row abaut-tex">abaut</div>
-            <div class="row tex">
-                <div class="col-12 col-md-6 col-lg-6 tex1">
-                tex1
+    <section class="about p-4 container-fluid">
+        <h2>ABOUT</h2>
+        <img class="avatar p-2" src="./img/star.w.svg" alt="Avatar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6 ">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt modi cumque mollitia exercitationem veniam! Amet enim praesentium asperiores pariatur nobis minima, doloremque distinctio, corporis veritatis veniam corrupti quos atque culpa.</p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 ">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt modi cumque mollitia exercitationem veniam! Amet enim praesentium asperiores pariatur nobis minima, doloremque distinctio, corporis veritatis veniam corrupti quos atque culpa.</p>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 tex2">
-                tex2
-                </div>
+                <button type="button" class=" bottone btn btn-outline-primary"> <img src="./img/dw.svg" alt=""> Download</button>
             </div>
-            <div class="row download">Download</div>
-        </div>
+    </section>
+
         <div class="row contact-me">
             <form>
                 <div class="mb-3">
