--- a/index.html
+++ b/index.html
@@ -90,26 +90,38 @@
             </div>
     </section>
 
-        <div class="row contact-me">
-            <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3 form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-            <div class="row contact-me-title"> CONTACT ME</div>
-            <div class="row form"> Nome...</div>
+    <section class="contact-me container-fluid">
+        <div class="row">
+            <div class="col m-3">
+                <h2>CONTACT ME</h2>
+                <img class="avatar" src="./img/star.B.svg" alt="Avatar">
+            </div>
         </div>
+    </section>
+
+    <section class="form my-5 container"> 
+        <form>
+            <div class="mb-3">
+                <label for="Name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="Nane" name="Nane">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">E-mail Address</label>
+                <input type="email" class="form-control" id="email" name="email">
+                </div>
+                <div class="mb-3">
+                <label for="phone-number" class="form-label">Phone Number</label>
+                <input type="tel" class="form-control" id="phone-number" name="phone-number">
+                </div>
+                <div class="mb-3">
+                <label for="Message" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                </div>
+            <button type="submit" class="btn btn-primary bg-grren">Send</button>
+        </form>
+    </section>
+
+
         <div class="row footer">
             <div class="col-12 col-md-4 col-lg-4 location">
                 Location
