--- a/index.html
+++ b/index.html
@@ -120,21 +120,23 @@
             <button type="submit" class="btn btn-primary bg-grren">Send</button>
         </form>
     </section>
-
-
-        <div class="row footer">
-            <div class="col-12 col-md-4 col-lg-4 location">
-                Location
+    
+        <div class="row footer p-5">
+            <div class="col-12 col-md-4 col-lg-4 my-5 ">
+                <h3>LOCATION</h3>
+                <h6>2215 John Daniel Drive Clark, Mo 54243</h6>
             </div>
-            <div class="col-12 col-md-4 col-lg-4 around">
-                Around the web
+            <div class="col-12 col-md-4 col-lg-4 my-5">
+                <h3>AROUND THE WEB</h3>
+                <img src="./img/social.svg" alt="">
             </div>
-            <div class="col-12 col-md-4 col-lg-4 freelancer">
-                About freelancer
+            <div class="col-12 col-md-4 col-lg-4 my-5">
+                <h3>ABOUTFREELANCER</h3>
+                <h6>Freelance is a free to use, open source Bootstap theme created <a href="#">by Start Bootstrap</a>.</h6>
             </div>   
-        </div>
-        <div class="row copyright">
-            <div class="col copyright-tex">copyright</div>
+        </div>  
+        <div class="row copyright p-5">
+            <h6>Copyright &#169; Your Website 2021</h6>
     </div>     
 </body>
 </html>
