--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <section class="form my-5 container"> 
+    <section class="form my-5 offset-3 col-6 container"> 
         <form>
             <div class="mb-3">
                 <label for="Name" class="form-label">Name</label>
